--- a/infra/package.json
+++ b/infra/package.json
@@ -5,8 +5,8 @@
         "@types/node": "^16"
     },
     "dependencies": {
-        "@pulumi/awsx": "^1.0.0",
-        "@pulumi/pulumi": "^3.0.0",
-        "@pulumi/kubernetes": "^3.0.0"
+        "@pulumi/awsx": "^3.1.0",
+        "@pulumi/kubernetes": "^4.25.0",
+        "@pulumi/pulumi": "^3.0.0"
     }
 }
