--- a/infra/package.json
+++ b/infra/package.json
@@ -2,11 +2,12 @@
     "name": "zephyr-app",
     "main": "index.ts",
     "devDependencies": {
-        "@types/node": "^16"
+        "@types/node": "^16.18.126"
     },
     "dependencies": {
         "@pulumi/awsx": "^3.1.0",
+        "@pulumi/docker": "^4.11.0",
         "@pulumi/kubernetes": "^4.25.0",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/pulumi": "^3.217.1"
     }
 }
